fix(storage): migrate StorageController from local filesystem to MinIO